--- a/style.css
+++ b/style.css
@@ -1,14 +1,20 @@
-/* :: pong_stylesheet :: */
+/* :: pong style :: */
+
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap'); 
+
 *{ margin:0; padding:0; box-sizing: border-box;}
+
+:root{
+    font-family: 'Press Start 2P', monospace;
+    font-size: 100%;
+}
 
 body{ 
     width: 100%;
     height: 100%;
     margin: 1em auto;
-    font-family:'Courier New', Courier, monospace;
     background-color: black;
 }
-
 
 h1{
     color: white;
